<resources>
    <string name="app_name">The Dionas App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="not_have_an_account_sign_up">Not have an account? Sign Up</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="username">Username</string>
    <string name="sign_up">Sigin Up</string>
    <string name="Confirm_password">Confirm Password</string>
</resources>